--- a/index.html
+++ b/index.html
@@ -5,11 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TopTrackz</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin: 0; padding: 0; background: #111; color: white; }
-    .screen { display: none; padding: 20px; }
-    .active { display: block; }
-    button { padding: 10px 20px; margin: 10px; font-size: 1.2em; border: none; border-radius: 10px; background-color: #1db954; color: white; cursor: pointer; }
-    input { font-size: 1.2em; margin: 5px; padding: 5px; border-radius: 5px; border: none; }
+    * { box-sizing: border-box; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(180deg, #0e0e0e, #1e1e1e);
+      color: white;
+      overflow: hidden;
+    }
+    .screen {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 20px;
+    }
+    .active {
+      display: flex;
+      z-index: 10;
+    }
+    h1, h2, h3 {
+      margin: 20px 0;
+      text-align: center;
+    }
+    button {
+      background-color: #1DB954;
+      border: none;
+      border-radius: 25px;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: white;
+      width: 80%;
+      max-width: 300px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      transition: background-color 0.3s, transform 0.1s;
+      margin: 10px 0;
+    }
+    button:hover {
+      background-color: #1ed760;
+    }
+    button:active {
+      transform: scale(0.98);
+    }
+    input {
+      padding: 12px;
+      width: 80%;
+      max-width: 300px;
+      margin: 8px 0;
+      font-size: 1rem;
+      border-radius: 10px;
+      border: none;
+      text-align: center;
+      background-color: #2c2c2c;
+      color: white;
+    }
+    #scores {
+      margin-top: 30px;
+      line-height: 1.6em;
+      text-align: center;
+    }
+    .button-stack {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+    .button-stack > button:not(:first-child) {
+      margin-top: 20px;
+    }
+    .mode-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+    .mode-buttons button {
+      margin: 15px 0;
+    }
   </style>
 </head>
 <body>
@@ -22,38 +103,36 @@
   <!-- Modus-Auswahl -->
   <div id="modeScreen" class="screen">
     <h2>Wähle den Spielmodus</h2>
-    <button onclick="startSingleplayer()">Einzelspieler</button>
-    <button onclick="goTo('multiplayerScreen')">Mehrspieler</button>
+    <div class="mode-buttons">
+      <button onclick="startSingleplayer()">Einzelspieler</button>
+      <button onclick="goTo('multiplayerScreen')">Mehrspieler</button>
+    </div>
   </div>
 
   <!-- Spielernamen eingeben -->
   <div id="multiplayerScreen" class="screen">
     <h2>Spielernamen eingeben</h2>
-    <div>
-      <input id="player1" placeholder="Spieler 1" /><br />
-      <input id="player2" placeholder="Spieler 2 (optional)" /><br />
-      <input id="player3" placeholder="Spieler 3 (optional)" /><br />
-      <input id="player4" placeholder="Spieler 4 (optional)" /><br />
-      <input id="player5" placeholder="Spieler 5 (optional)" /><br />
-    </div>
-    <button onclick="startMultiplayer()">Starten</button>
+    <input id="player1" placeholder="Spieler 1" />
+    <input id="player2" placeholder="Spieler 2 (optional)" />
+    <input id="player3" placeholder="Spieler 3 (optional)" />
+    <input id="player4" placeholder="Spieler 4 (optional)" />
+    <input id="player5" placeholder="Spieler 5 (optional)" />
+    <button onclick="startMultiplayer()">Spiel starten</button>
   </div>
 
   <!-- Spielseite -->
   <div id="gameScreen" class="screen">
-    <h2 id="currentPlayer">Spieler</h2>
-    <div id="songInfo">[Song wird hier später angezeigt]</div>
+    <h2 id="currentPlayer">Spieler ist dran</h2>
+    <div id="songInfo" style="margin-top: 20px; font-size: 1.1rem;">[Song wird hier später angezeigt]</div>
 
-    <div>
-      <button onclick="playSong()">▶️ Abspielen</button>
-    </div>
-
-    <div style="margin-top: 20px;">
+    <div class="button-stack" style="margin-top: 50px;">
+      <button onclick="playSong()">Abspielen</button>
+      <div style="height: 30px;"></div>
       <button onclick="submitGuess(true)">Erraten</button>
       <button onclick="submitGuess(false)" style="background-color: #e74c3c;">Nicht erraten</button>
     </div>
 
-    <div id="scores" style="margin-top: 20px;"></div>
+    <div id="scores"></div>
   </div>
 
   <script>
@@ -101,8 +180,7 @@
     }
 
     function playSong() {
-      // Platzhalter – hier würde später ein Spotify-Track abgespielt
-      document.getElementById('songInfo').textContent = '🎵 Beispiel-Song läuft...';
+      document.getElementById('songInfo').textContent = 'Beispiel-Song läuft...';
     }
 
     function submitGuess(correct) {
@@ -114,7 +192,7 @@
 
     function updateScores() {
       const scoreDiv = document.getElementById('scores');
-      scoreDiv.innerHTML = '<h3>Punktestand:</h3>' +
+      scoreDiv.innerHTML = '<h3>Punktestand</h3>' +
         players.map(p => `${p}: ${scores[p]} Punkte`).join('<br>');
     }
   </script>
