--- a/index.html
+++ b/index.html
@@ -30,30 +30,75 @@
     const REDIRECT_URI = "https://sabine187.github.io/TopTrackz/";
     const SCOPES = "streaming user-read-email user-read-private user-modify-playback-state user-read-playback-state";
 
-    document.getElementById("spotifyButton").addEventListener("click", function () {
-      const authEndpoint = "https://accounts.spotify.com/authorize";
-      const url = `${authEndpoint}?client_id=${CLIENT_ID}&redirect_uri=${encodeURIComponent(REDIRECT_URI)}&scope=${encodeURIComponent(SCOPES)}&response_type=token&show_dialog=true`;
+    function generateRandomString(length) {
+      let text = '';
+      let possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+      for (let i = 0; i < length; i++) {
+        text += possible.charAt(Math.floor(Math.random() * possible.length));
+      }
+      return text;
+    }
+
+    async function generateCodeChallenge(codeVerifier) {
+      const encoder = new TextEncoder();
+      const data = encoder.encode(codeVerifier);
+      const digest = await window.crypto.subtle.digest('SHA-256', data);
+      return btoa(String.fromCharCode(...new Uint8Array(digest)))
+        .replace(/\+/g, '-')
+        .replace(/\//g, '_')
+        .replace(/=+$/, '');
+    }
+
+    document.getElementById("spotifyButton").addEventListener("click", async function () {
+      const codeVerifier = generateRandomString(128);
+      const codeChallenge = await generateCodeChallenge(codeVerifier);
+      localStorage.setItem('code_verifier', codeVerifier);
+
+      const url = `https://accounts.spotify.com/authorize?response_type=code&client_id=${CLIENT_ID}&scope=${encodeURIComponent(SCOPES)}&redirect_uri=${encodeURIComponent(REDIRECT_URI)}&code_challenge_method=S256&code_challenge=${codeChallenge}`;
       window.location.href = url;
     });
+
+    async function exchangeToken(code) {
+      const codeVerifier = localStorage.getItem('code_verifier');
+
+      const body = new URLSearchParams({
+        client_id: CLIENT_ID,
+        grant_type: 'authorization_code',
+        code,
+        redirect_uri: REDIRECT_URI,
+        code_verifier: codeVerifier
+      });
+
+      const response = await fetch('https://accounts.spotify.com/api/token', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body
+      });
+
+      const data = await response.json();
+      if (data.access_token) {
+        localStorage.setItem("spotify_access_token", data.access_token);
+        showDebugToken();
+        goTo("modeScreen");
+      } else {
+        console.error("Token-Antwort ungültig:", data);
+      }
+    }
 
     function showDebugToken() {
       const token = localStorage.getItem("spotify_access_token");
       document.getElementById("debug-token").textContent = token ? "Token gespeichert ✅" : "Kein Token ❌";
     }
 
-    // Wenn ein access_token in der URL ist, speichern und bereinigen
-    if (window.location.hash.includes("access_token")) {
-      const hash = window.location.hash.substring(1);
-      const params = new URLSearchParams(hash);
-      const token = params.get("access_token");
-      if (token) {
-        localStorage.setItem("spotify_access_token", token);
-        window.location.hash = ""; // URL bereinigen
-      }
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get("code");
+    if (code) {
+      exchangeToken(code);
     }
 
     if (window.location.hash === "#reset") {
       localStorage.removeItem("spotify_access_token");
+      localStorage.removeItem("code_verifier");
       const cleanUrl = window.location.origin + window.location.pathname;
       window.location.replace(cleanUrl);
     }
@@ -73,3 +118,4 @@
   </script>
 </body>
 </html>
+
