--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       text-align: center;
     }
     button {
-      background-color: #1DB954;
       border: none;
       border-radius: 25px;
       padding: 15px 30px;
@@ -53,13 +52,22 @@
       max-width: 300px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       transition: background-color 0.3s, transform 0.1s;
-      margin: 10px 0;
+      margin: 12px 0;
     }
     button:hover {
-      background-color: #1ed760;
+      filter: brightness(1.1);
     }
     button:active {
       transform: scale(0.98);
+    }
+    .btn-green {
+      background-color: #1DB954;
+    }
+    .btn-red {
+      background-color: #E53935;
+    }
+    .btn-gray {
+      background-color: #2c2c2c;
     }
     input {
       padding: 12px;
@@ -78,19 +86,35 @@
       line-height: 1.6em;
       text-align: center;
     }
+    #spotify-login {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+    }
+    #debug-token {
+      position: fixed;
+      top: 5px;
+      left: 5px;
+      font-size: 0.7rem;
+      color: #999;
+      max-width: 90vw;
+      word-break: break-word;
+    }
   </style>
 </head>
 <body>
   <div id="startScreen" class="screen active">
     <h1>TopTrackz</h1>
-    <button onclick="goTo('modeScreen')">Start</button>
+    <button class="btn-green" onclick="goTo('modeScreen')">Start</button>
     <div id="debug-token"></div>
   </div>
 
   <div id="modeScreen" class="screen">
     <h2>Wähle deinen Spielmodus</h2>
-    <button onclick="startSinglePlayer()">Einzelspieler</button>
-    <button onclick="goTo('multiplayerSetup')">Mehrspieler</button>
+    <button class="btn-green" onclick="startSinglePlayer()">Einzelspieler</button>
+    <button class="btn-green" onclick="goTo('multiplayerSetup')">Mehrspieler</button>
   </div>
 
   <div id="multiplayerSetup" class="screen">
@@ -100,19 +124,19 @@
     <input id="player3" placeholder="Spieler 3" />
     <input id="player4" placeholder="Spieler 4" />
     <input id="player5" placeholder="Spieler 5" />
-    <button onclick="startMultiplayerGame()">Spiel starten</button>
+    <button class="btn-green" onclick="startMultiplayerGame()">Spiel starten</button>
   </div>
 
   <div id="gameScreen" class="screen">
     <h2 id="currentPlayer"></h2>
     <div id="scores"></div>
-    <button onclick="playSong()">🎵 Abspielen</button>
-    <button onclick="markCorrect()">✅ Erraten</button>
-    <button onclick="markWrong()">❌ Nicht erraten</button>
+    <button class="btn-gray" style="margin-bottom: 30px;" onclick="playSong()">Abspielen</button>
+    <button class="btn-green" onclick="markCorrect()">Erraten</button>
+    <button class="btn-red" onclick="markWrong()">Nicht erraten</button>
   </div>
 
   <div id="spotify-login">
-    <button id="spotifyButton">Mit Spotify verbinden</button>
+    <button class="btn-green" id="spotifyButton">Mit Spotify verbinden</button>
   </div>
 
   <script>
@@ -245,7 +269,7 @@
     }
 
     function playSong() {
-      alert("Song würde jetzt abgespielt werden 🎵");
+      alert("Song würde jetzt abgespielt werden.");
     }
 
     function markCorrect() {
@@ -264,5 +288,3 @@
   </script>
 </body>
 </html>
-
-
